# iot-energy-monitor

./: README.md
backend/: config.py  database.py  main.py  models.py  mqtt_client.py
backend/api/: main.py
backend/api/routes/: devices.py  health.py  measurments.py
backend/database/: data_device.py  database.py  device_repository.py  measurments.py  sensor_repository.py  sensors_data.db  status_repository.py
backend/models/: device.py  models.py  sensor.py  status.py
backend/mqtt/: mqtt_client.py  mqtt_parser.py
backend/services/: average.py  data_device.py  measurments.py  statistics.py
database/: sensors_data.db
docs/: AI_CONTEXT.md  project_state.md
firmware/esp32_energy_monitor/: CMakeLists.txt
firmware/esp32_energy_monitor/components/device/: CMakeLists.txt  Kconfig  device.c  device.h
firmware/esp32_energy_monitor/components/mqtt_service/: CMakeLists.txt  Kconfig  mqtt.c  mqtt.h
firmware/esp32_energy_monitor/components/sntp_time/: CMakeLists.txt  sntp_time.c  sntp_time.h
firmware/esp32_energy_monitor/components/wifi/: CMakeLists.txt  Kconfig  wifi.c  wifi.h
firmware/esp32_energy_monitor/lib/: CMakeLists.txt
firmware/esp32_energy_monitor/lib/inc/: humidity_sensor.h  sensor.h  temp_sensor.h
firmware/esp32_energy_monitor/lib/src/: humidity_sensor.c  sensor.c  temp_sensor.c
firmware/esp32_energy_monitor/main/: CMakeLists.txt  Kconfig.projbuild  main.c
