idf_component_register(SRCS "main.c"
                    INCLUDE_DIRS "."
                    PRIV_REQUIRES lib
                                  esp_event
                                  esp_netif
                                  esp_wifi
                                  mqtt
                                  nvs_flash)
